--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
       To begin the development, run `npm start` in this folder.
       To create a production bundle, use `npm run build`.
     -->
+    <script type="text/javascript" src="bundle.js">
+
+    </script>
   </body>
 </html>
